[gd_scene load_steps=4 format=3 uid="uid://fn4q1nev6ij7"]

[ext_resource type="Script" path="res://UI/TitleScreen.gd" id="1_1qprl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mjma6"]

[sub_resource type="Theme" id="Theme_wgfcu"]
Button/styles/disabled = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = SubResource("StyleBoxTexture_mjma6")

[node name="TitleScreen" type="TextureRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1qprl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="New" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_wgfcu")
text = "新游戏"

[node name="Load" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "加载"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "退出"

[connection signal="pressed" from="VBoxContainer/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
